[tool.poetry]
name = "ehport"
version = "0.1.0"
description = "export and import E-Hentai favorites!"
authors = ["Floozutter <floozutter@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
